# go-synthesizer

./: CLAUDE.md  Cargo.build-spec.json  Cargo.toml
.github/workflows/: auto-release.yml
src/: file.rs  gomod.rs  hashkinds.rs  kube.rs  lib.rs  node.rs  synthesizer_core_impl.rs  tfemit.rs  tfspec.rs
tests/: golden.rs  properties.rs  synthesizer_core_conformance.rs
